2018-08-22  Ms2ger  <Ms2ger@igalia.com>

        [GTK] Never return an uninitialized ImageGStreamer object.
        https://bugs.webkit.org/show_bug.cgi?id=188305

        Reviewed by Philippe Normand.

        The single caller was already checking for a null return value, so
        make that check actually do something. Also remove the null-check on
        the return value of image(), which asserted that it would never return
        null.

        Test: fast/canvas/canvas-createPattern-video-loading.html

        * platform/graphics/gstreamer/ImageGStreamer.h:
        (WebCore::ImageGStreamer::createImage): Return null if m_image wasn't created.
        (WebCore::ImageGStreamer::image): Return a reference.
        (WebCore::ImageGStreamer::rect): Always assert that m_image is present.
        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
        (WebCore::MediaPlayerPrivateGStreamerBase::paint): Update for new signature.

2018-08-22  Zalan Bujtas  <zalan@apple.com>

        Add changes missing from r234925.

        * layout/blockformatting/BlockMarginCollapse.cpp:
        (WebCore::Layout::isMarginTopCollapsedWithParent):
        (WebCore::Layout::isMarginBottomCollapsedThrough):
        (WebCore::Layout::BlockFormattingContext::MarginCollapse::isMarginBottomCollapsedWithParent):

2018-08-22  Zan Dobersek  <zdobersek@igalia.com>

        [CoordGraphics] Switch to Nicosia::CompositionLayer state tracking
        https://bugs.webkit.org/show_bug.cgi?id=188693

        Reviewed by Carlos Garcia Campos.

        Populate Nicosia::CompositionLayer with additional LayerState member
        objects. For now we're using pending, staging and committed states,
        though it might be possible to narrow down these to just two.

        Pending state contains state that will be moved to staging during the
        final steps of the next layer flush. flushState() method accumulates all