@@ -1,3 +1,12 @@
+2018-08-22  Youenn Fablet  <youenn@apple.com>
+
+        Mark MediaStream Recording API as under consideration
+        https://bugs.webkit.org/show_bug.cgi?id=188822
+
+        Reviewed by Jon Lee.
+
+        * features.json:
+
 2018-08-22  Ms2ger  <Ms2ger@igalia.com>
 
         [GTK] Never return an uninitialized ImageGStreamer object.
